# F1

./: README.md  config.yaml  main.py  pyproject.toml
model/: extratrees_model.joblib  model.joblib  team_driver_performance.csv
notebooks/: init.ipynb  predict.ipynb  prep_training_data.ipynb  team_data.ipynb
src/: train.py  update_team_perf.py  utils.py
