[project]
name = "f1"
version = "0.1.0"
description = "A Python project for F1 data analysis and machine learning"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dask>=2025.9.0",
    "dask-ml>=2025.1.0",
    "fastf1>=3.6.1",
    "h2o>=3.46.0.7",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.6",
    "optuna>=4.5.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]
