[project]
name = "f1"
version = "0.1.0"
description = "A Python project for F1 data analysis and machine learning"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastf1>=3.6.1",
    "h2o>=3.46.0.7",
    "lightgbm>=4.6.0",
    "optuna>=4.5.0",
    "plotly>=6.3.1",
    "scikit-learn>=1.7.2",
    "tqdm>=4.67.1",
    "xgboost>=3.1.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "seaborn>=0.13.2",
    "matplotlib>=3.10.6",
]
